Opened 4 years ago
Closed 3 years ago
#17186 closed bug (fixed)
installing an .hpkg by double-clicking the file fails.
Reported by: | bbjimmy | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/HaikuDepot | Version: | R1/beta3 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
on hrev 52296 x86_64
I downloaded Krita from https://depot.haiku-os.org/#!/pkg/krita/haikuports/4/4/7/-/1/x86_64?bcguid=bc2-HGPA and opened the file and pressed "Install Krita" and nothing happened. The install button remained active and there was no activity on the progress bar in the lower left of the window.
The software installed from HaikuDepot by chosing from the list.
Change History (9)
comment:1 by , 4 years ago
comment:2 by , 4 years ago
I have experienced the same problem with freshly built packages from haikuporter. Opening the built packages from the haikuports/packages directory and pressing Install does nothing. Installing via pkgman works.
comment:3 by , 4 years ago
After I pressed the install button nothing happened for about 10 minutes. no network activity, no dialogue box with additional packages to be installed. I closed and re-launched several times pressing the install button multiple times, nothing ever happened. I finally gave up and tried to install by launching HaikuDepot from the applications menu and installed from there.
I used cmp to compare the .hpkg file HaikDepot installed in /boot/system/packages with the one I downloaded, there is no difference between them.
comment:4 by , 4 years ago
I have recently made some changes in this area so it is possible this may have lead to this problem. I will try to look into it soon.
comment:5 by , 4 years ago
I have recently experienced exactly the same behaviour trying to install mesa-21.2.0-1-x86_64.hpkg, although I am not sure if this is a related issue
comment:6 by , 4 years ago
Hello could you please try this problem again after this is available; https://review.haiku-os.org/c/haiku/+/4358
comment:9 by , 3 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Are you completely sure? I just tried doing the same and it does work...
Remember, Krita has a few quite large dependencies that - if not available already - have to be downloaded first. I do get that 'dependency window' and after acknowledging it gets those packages for a minute (you can watch with ActivityMonitor showing network activity). When all's done, the "Install" button disappears and Krita is launchable.
Improvements would be to show that packages are being downloded in the HaikuDepot status bar instead of just "Installing..." and to get an "Open" button when finished. There may already be a ticket for the latter.